[OutputBuilder] Make sure separators always have a border (instead of adding one on hover).
The default is for this border to be invisible; it is made visible only
when hovering over a given separator with the mouse.

By making sure separators always have a border we get rid of any
"jiggling" that used to happen when moving the mouse back and forth over
a given output string.

--- a/ode/public/css/output.css
+++ b/ode/public/css/output.css
@@ -32,6 +32,8 @@ hr {
 }
 
 .sep {
+    border: 1px solid rgba(148, 214, 234, 0); /* #94D6EA */
+    border-radius: 3px;
     margin-left: 2px;
     margin-right: 2px;
     padding-left: 4px;
@@ -40,8 +42,7 @@ hr {
 }
 
 .sep:hover {
-    border: 1px solid #94D6EA;
-    border-radius: 3px;
+    border: 1px solid rgba(148, 214, 234, 1); /* #94D6EA */
 }
 
 .remove-button {
